syntax = "proto3";

package proto;

service DDICtrlManager {
    rpc MasterUp(DDICtrlRequest) returns (DDICtrlResponse) {}
    rpc MasterDown(DDICtrlRequest) returns (DDICtrlResponse) {}
}

message DDICtrlResponse {
    bool succeed = 1;
}

message DDICtrlRequest {
    string master_ip = 1;
    string slave_ip = 2;
}
